[package]
name = "objgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
crossterm = "0.27.0"
object = "0.34.0"
ratatui = { version = "0.26.1", features = ["crossterm", "widget-calendar"] }
