[package]
name = "objgrep"
version = "0.1.0"
description = "A tool to read binarys"
edition = "2021"
license = "MIT"
author = "Cr0a3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
PrintLib = "1.5.2"
capstone = "0.12.0"
clap = { version = "4.5.4", features = ["derive"] }
object = "0.34.0"
pad = "0.1.6"
